feat: implemented user editing service (#20)
* fix(open api): added missing parameters to user deletion endpoint

* feat: implemented user update service

* refactor(user query service): throws EntityNotFoundException instead of returning an optional

* refactor(user mapper): extracted partialUpdate method to own class

* fix: was unable to update user because of missing password in dto

* test: implemented integration tests for updating an existing user

* refactor: put user id back in the path of the update user endpoint

* refactor(user services): moved all classes into own service package

* refactor(user mapper): moved mapper to own package

* refactor(user): moved entity class and enums to own model package

* refactor(user): introduced user update dto instead of using the general user dto

* chore(user tests): changed project structure of the user tests

* refactor(user tests): reduced duplicated code by extending tests from abstract IntegrationTest class

* refactor(open api): the different user DTOs now inherit from a base user dto

* fix: validation fails when users name contains multiple words (#19)

* fix(open api): api now accepts whitespaces inside names, profession and department

* fix(open api): api accidentally allowed whitespaces at the beginning and the end of a word

* fix(open api): api accidentally allowed whitespaces at the beginning and the end of a word

* chore(user): moved controller and repository into own package

* fix(open api): pattern didn't accept more than 2 words
