# src/main/resources/openapi.yaml
@@ -100,6 +100,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+
     put:
       operationId: updateUserById
       summary: Updates an existing user by his user id
@@ -113,7 +114,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/UserUpdate'
       responses:
         200:
           description: The updated user containing the new data provided in the request body
@@ -122,14 +123,15 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
     delete:
+      parameters:
+        - $ref: '#/components/parameters/userId'
       operationId: deleteUserById
       summary: Deletes an existing user by his user id
       tags:
         - User
       responses:
-        200:
+        204:
           description: Specifies that deleting the user was performed successfully
-
 
 
 components:
@@ -176,18 +178,17 @@ components:
 
 
   schemas:
-    User:
+
+    BaseUser:
       type: object
       properties:
-        id:
-          $ref: '#/components/schemas/Id'
         firstName:
           type: string
-          pattern: ^[a-zA-Z\x7f-\xff-]{2,}$
+          pattern: ^[a-zA-Z\x7f-\xff-]{2,}+(\s?[a-zA-Z\x7f-\xff-]{2,})*$
           example: Max
         lastName:
           type: string
-          pattern: ^[a-zA-Z\x7f-\xff-]{2,}$
+          pattern: ^[a-zA-Z\x7f-\xff-]{2,}+(\s?[a-zA-Z\x7f-\xff-]{2,})*$
           example: Mustermann
         username:
           type: string
@@ -200,16 +201,16 @@ components:
           example: 1999-04-12
         gender:
           $ref: '#/components/schemas/Gender'
-        # The profile picture is missing here, because it will be handled in a separate endpoint for pictures
-        # to reduce the amount of data transmitted at once. The picture can also be accessed more easily
-        # in the controller when it will be transmitted as image/jpeg instead of application/json
+          # The profile picture is missing here, because it will be handled in a separate endpoint for pictures
+          # to reduce the amount of data transmitted at once. The picture can also be accessed more easily
+          # in the controller when it will be transmitted as image/jpeg instead of application/json
         profession:
           type: string
-          pattern: ^\D+$
+          pattern: ^[a-zA-Z\x7f-\xff-]{2,}+(\s?[a-zA-Z\x7f-\xff-]{2,})*$
           example: Ausbilder
         department:
           type: string
-          pattern: ^[a-zA-Z\x7f-\xff-]+$
+          pattern: ^[a-zA-Z\x7f-\xff-]{2,}+(\s?[a-zA-Z\x7f-\xff-]{2,})*$
           example: Informationstechnik
         roomNumber:
           type: string
@@ -220,7 +221,6 @@ components:
         accessRole:
           $ref: '#/components/schemas/AccessRole'
       required:
-        - id
         - firstName
         - lastName
         - username
@@ -229,56 +229,33 @@ components:
         - department
         - accessRole
 
+
+    User:
+      allOf:
+        - $ref: '#/components/schemas/BaseUser'
+        - type: object
+          properties:
+            id:
+              $ref: '#/components/schemas/Id'
+          required:
+            - id
+
     UserCreation:
-      type: object
-      properties:
-        firstName:
-          type: string
-          pattern: ^[a-zA-Z\x7f-\xff-]{2,}$
-          example: Max
-        lastName:
-          type: string
-          pattern: ^[a-zA-Z\x7f-\xff-]{2,}$
-          example: Mustermann
-        username:
-          type: string
-          pattern: ^[a-zA-Z\x7f-\xff-]+[.][a-zA-Z\x7f-\xff-]+\d*$
-          example: max.mustermann2
-        password:
-          type: string
-          format: password
-          writeOnly: true
-          example: Str3ngG3h3!m
-        dateOfBirth:
-          type: string
-          format: date
-          description: The date of birth in ISO 8601 format (YYYY-MM-DD)
-          example: 1999-04-12
-        gender:
-          $ref: '#/components/schemas/Gender'
-        profession:
-          type: string
-          pattern: ^\D+$
-          example: Ausbilder
-        department:
-          type: string
-          pattern: ^[a-zA-Z\x7f-\xff-]+$
-          example: Informationstechnik
-        roomNumber:
-          type: string
-          pattern: ^\d{1,3}[.]\d{1,3}[.]\d{1,3}$
-          example: 2.3.12
-        accessRole:
-          $ref: '#/components/schemas/AccessRole'
-      required:
-        - firstName
-        - lastName
-        - username
-        - password
-        - gender
-        - profession
-        - department
-        - accessRole
+      allOf:
+        - $ref: '#/components/schemas/BaseUser'
+        - type: object
+          properties:
+            password:
+              type: string
+              format: password
+              writeOnly: true
+              example: Str3ngG3h3!m
+          required:
+            - password
+
+    UserUpdate:
+      allOf:
+        - $ref: '#/components/schemas/BaseUser'
 
     UserPreferences:
       type: object
@@ -337,7 +314,6 @@ components:
       format: int32
       description: The unique identifier of the user preferences.
       minimum: 1
-      readOnly: true
       example: 123
 
 
